# mendingwall

./: .gitignore  404.html  README.md  index.html  mendingwall.spec  mendingwall.spec.in  meson.build  meson.options  mkdocs.yaml  org.indii.mendingwall.json  sitemap.xml
.circleci/: config.yml
assets/: kde_many_file_manager_apps_dark.kra  kde_many_file_manager_apps_light.kra
build-aux/: org.indii.mendingwall.json  start-mendingwall.sh  start-mendingwalld.sh
contributing/: index.html
data/: mendingwall-themes-restore.sh  mendingwalld.sh.in  menus.conf  meson.build  org.indii.mendingwall.desktop.in  org.indii.mendingwall.gschema.xml  org.indii.mendingwall.menus.desktop.in  org.indii.mendingwall.menus.service.in  org.indii.mendingwall.metainfo.xml.in  org.indii.mendingwall.restore.desktop.in  org.indii.mendingwall.restore.desktop.in-flatpak  org.indii.mendingwall.restore.desktop.in-snap  org.indii.mendingwall.restore.sh.in  org.indii.mendingwall.restore.sh.in-flatpak  org.indii.mendingwall.restore.sh.in-snap  org.indii.mendingwall.service.in  org.indii.mendingwall.themes.desktop.in  org.indii.mendingwall.themes.restore.desktop.in  org.indii.mendingwall.themes.save.desktop.in  org.indii.mendingwall.themes.save.service.in  org.indii.mendingwall.themes.service.in  org.indii.mendingwall.watch.desktop.in  org.indii.mendingwall.watch.desktop.in-flatpak  org.indii.mendingwall.watch.desktop.in-snap  org.indii.mendingwall.watch.service.in  org.indii.mendingwalld.desktop.in  org.indii.mendingwalld.restore.desktop.in  org.indii.mendingwalld.service.in  themes.conf
data/conf/: meson.build  themes.conf
data/icons/: meson.build
debian/: changelog.in  control  copyright  copyright.in  meson.build
docs/: basic.md  contributing.md  faq.md  getting-started.md  how-you-can-help.md  index.md  manage-menus.md  mend-themes.md  protect-themes.md  questions-and-answers.md  sponsor.md  tidy-menus.md  untangle-themes.md
docs/advanced/: counterpart-applications.md  preserve-themes.md
docs/assets/: gnome_many_terminal_apps.kra
docs/help/: counterpart-applications.md  index.md  preserve-themes.md
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css
faq/: index.html
flatpak/: org.indii.mendingwall.yaml  start-mendingwall.sh  start-mendingwallcli.sh  start-mendingwalld.sh
getting-started/: index.html
mend-themes/: index.html
overrides/partials/: header.html
po/: POTFILES.in  meson.build
search/: search_index.json
snap/: snapcraft.yaml
src/: about.blp  custom-pill-box.blp  custom-pill-box.c  custom-pill-box.h  custom-pill.blp  custom-pill.c  custom-pill.h  foreach.h  main.blp  main.c  mendingwall-background-application.c  mendingwall-background-application.h  mendingwall-menus-application.c  mendingwall-menus-application.h  mendingwall-menus-backup.c  mendingwall-menus.c  mendingwall-menusapp.c  mendingwall-menusapp.h  mendingwall-menusapplication.c  mendingwall-menusapplication.h  mendingwall-themes-application.c  mendingwall-themes-application.h  mendingwall-themes-restore.c  mendingwall-themes-save.c  mendingwall-themes.c  mendingwall-themesapp.c  mendingwall-themesapp.h  mendingwall-themesapplication.c  mendingwall-themesapplication.h  mendingwall.blp  mendingwall.c  mendingwall.gresource.xml  mendingwallapplication.c  mendingwallapplication.h  mendingwallcli.c  mendingwallcliapplication.c  mendingwallcliapplication.h  mendingwalld-application.c  mendingwalld-application.h  mendingwalld.c  (+10 more)
tidy-menus/: index.html
